# Cross-Backend-AI-Comparison

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
configs/: benchmark.yaml  cuda.yaml  openvino.yaml  rocm.yaml
docs/: ARCHITECTURE.md  USAGE.md
results/: README.md
src/: __init__.py  analysis.py  backends.py  runner.py  visualization.py
src/backends/cuda/: __init__.py
src/backends/openvino/: __init__.py
src/backends/rocm/: __init__.py
tests/: test_analysis.py
