[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-backend-ai-comparison"
version = "1.0.0"
description = "Cross-backend AI inference comparison framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Sudheer Devu"}
]
keywords = ["benchmark", "rocm", "cuda", "openvino", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "onnxruntime>=1.12.0",
    "pyyaml>=6.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
rocm = ["onnxruntime-rocm"]
cuda = ["onnxruntime-gpu"]
openvino = ["openvino"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/sudheerdevu/Cross-Backend-AI-Comparison"
Repository = "https://github.com/sudheerdevu/Cross-Backend-AI-Comparison"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
